--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "nodemon": "^3.0.0"
   },
   "engines": {
-    "node": ">=18.0.0"
+    "node": "18.x"
   },
   "repository": {
     "type": "git",
